# Build HDF5
set(HDF5_EXTERNALLY_CONFIGURED  ON CACHE BOOL " " FORCE)
set(HDF5_BUILD_EXAMPLES         OFF CACHE BOOL " " FORCE)
set(HDF5_BUILD_TOOLS            OFF CACHE BOOL " " FORCE)
set(HDF5_INSTALL_NO_DEVELOPMENT OFF CACHE BOOL " " FORCE)
set(HDF5_EXPORTED_TARGETS       hdf5-shared CACHE STRING " " FORCE)
set(BUILD_TESTING OFF CACHE BOOL " " FORCE)
add_subdirectory(hdf5)

set(HDF5_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/hdf5/src" PARENT_SCOPE)
set(HDF5_HL_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/hdf5/hl/src" PARENT_SCOPE)
